# owl

./: .gitignore  CMakeLists.txt  Makefile  README.md  app_streamlit.py  run_local.sh
data/calibrated_mission/: acoustic_features.csv  events.csv  imu.csv  metadata.json  source_manifest.json
data/demo_mission/: events.csv  metadata.json  network.geojson  reel.csv  robot_state.csv
data/source_artifacts/: aqualoc_page.html  gpla12_tree.json  oceanship_arxiv.json  source_manifest.json  subpipe_zenodo_record.json  wntr_tree.json
docs/: dataset_plan.md  design.md  hardware_log_format.md  mission_format.md  safety_checklist.md  simulation_report.md  technical_walkthrough.md
include/owl/: PipeRobotController.hpp
pipeowl/: __init__.py  calibration_profiles.py  features.py  hardware_importer.py  mission_builder.py  provenance.py  schemas.py
pipeowl/adapters/: __init__.py  aqualoc_adapter.py  base.py  gpla12_adapter.py  oceanship_adapter.py  subpipe_adapter.py  wntr_adapter.py
scripts/: fetch_source_proof.py  generate_calibrated_mission.py  generate_demo_mission.py  import_hardware_mission.py  subpipe_adapter.py  validate_mission.py
src/: PipeRobotController.cpp  main.cpp
tests/: controller_tests.cpp  pipeowl_tests.py
